# interview-tokio-marine

./: .gitignore  Makefile  README.md  pyproject.toml
config/: .env.example
docs/src/: index.md  openapi.json
src/tokio_marine/: main.py
src/tokio_marine/application/services/: __init__.py  policy_service.py
src/tokio_marine/application/utils/: identifier_util.py  json_util.py
src/tokio_marine/domain/: exceptions.py  models.py  repositories.py  services.py
src/tokio_marine/infrastructure/repositories/: __init__.py  policy_repository.py
src/tokio_marine/infrastructure/routes/: __init__.py  dependencies.py
src/tokio_marine/infrastructure/routes/api/v1/: policies.py
tests/tokio_marine/integration/repositories/: test_policy_repository.py
tests/tokio_marine/unit/domain/: test_models.py
tests/tokio_marine/unit/services/: test_policy_service.py
tests/tokio_marine/unit/services/resources/: one.json
